--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tnt-dom",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Super simple DOM utilities",
   "main": "src/Element.js",
   "scripts": {
@@ -26,5 +26,14 @@
   "bugs": {
     "url": "https://github.com/reinvanoyen/tnt-dom/issues"
   },
-  "homepage": "https://github.com/reinvanoyen/tnt-dom#readme"
+  "homepage": "https://github.com/reinvanoyen/tnt-dom#readme",
+  "devDependencies": {
+    "babel-preset-es2015": "^6.6.0",
+    "babelify": "^7.3.0",
+    "browserify": "^13.0.0",
+    "gulp": "^3.9.1",
+    "gulp-watch": "^4.3.5",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
+  }
 }
