--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tnt-dom",
   "version": "0.0.2",
   "description": "Super simple DOM utilities",
-  "main": "src/Element.js",
+  "main": "src/TntDomElement.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
